--- a/all/3/package.json
+++ b/all/3/package.json
@@ -19,6 +19,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
